[project]
name = "streamlit-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "plotly>=6.2.0",
    "streamlit>=1.45.1",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
